[tool.poetry]
name = "scheduling-optimization"
version = "0.1.0"
description = ""
authors = ["Andres Garcia Mangas <agmangas@gmail.com>"]
readme = "README.md"
packages = [{ include = "scheduling_optimization" }]

[tool.poetry.dependencies]
python = "^3.8"
ortools = "^9.4.1874"
coloredlogs = "^15.0.1"


[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
